/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 * Modifications Copyright OpenSearch Contributors. See
 * GitHub history for details.
 */

syntax = "proto3";
package opensearch.proto.services;

import "spec/search.proto";

option java_outer_classname = "Search";

service SearchService {
  /*Consolidate to Search*/
  rpc Search(SearchRequest) returns (SearchResponse) {}
  rpc IndexSearch(IndexSearchRequest) returns (IndexSearchResponse) {}

  rpc Explain(ExplainRequest) returns (ExplainResponse) {}
}
